Bug 465027 - Opening playlist files on startup doesn't work
Summary: Opening playlist files on startup doesn't work
Status: RESOLVED FIXED
Alias: None
Product: Haruna
Classification: Applications
Component: generic (other bugs)
Version First Reported In: 0.10.3
Platform: Flatpak Linux
: NOR minor
Target Milestone: ---
Assignee: george fb
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-01-30 07:32 UTC by Trystan Kelly
Modified: 2023-01-30 11:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Trystan Kelly 2023-01-30 07:32:03 UTC
SUMMARY
When the app is started with a specified file (e.g. with a command line argument), it works fine for media files. But playlist files do not work. Drag/drop and browsing for the file manually work fine as well.


STEPS TO REPRODUCE
1. Run haruna from the command line with a M3U playlist as the file argument
2. (Alternative) Open a M3U playlist file in your file manager with haruna

OBSERVED RESULT
It opens but doesn't load the file or start playing anything.

EXPECTED RESULT
It opens and starts the playlist.
Comment 1 george fb 2023-01-30 11:39:46 UTC
Git commit 056817925dd0e0223a656880fc2d75d87575387c by George Florea Bănuș.
Committed on 30/01/2023 at 11:39.
Pushed by georgefb into branch 'master'.

Application::mimeType: set url scheme to `file` if empty

M  +4    -1    src/application.cpp
M  +1    -1    src/application.h

https://invent.kde.org/multimedia/haruna/commit/056817925dd0e0223a656880fc2d75d87575387c