Application::mimeType: set url scheme to `file` if empty

BUG: 465027